tests/Errors/String.jack
class String
{field String s;
    function String f1() {
        let s = " 2ojojoj
  doiajwdoa";
}
}
